# uv-doc-zh

./: 404.html  Downloads  baidu_verify_codeva-BIL4IhHtlX.html  index.html  mkdocs.yml  push_urls_to_search_engines.py  pyproject.toml  robots.txt  sitemap.xml
.github/workflows/: ci.yml
blog/: index.html
concepts/: index.html
concepts/authentication/: index.html
concepts/build-backend/: index.html
concepts/cache/: index.html
concepts/configuration-files/: index.html
concepts/indexes/: index.html
concepts/preview/: index.html
concepts/projects/: index.html
concepts/python-versions/: index.html
concepts/resolution/: index.html
concepts/tools/: index.html
docs/: feedback.md  index.md
docs/.overrides/: main.html
docs/blog/: .authors.yaml  index.md
docs/concepts/: authentication.md  build-backend.md  cache.md  configuration-files.md  index.md  indexes.md  preview.md  python-versions.md  resolution.md  tools.md
docs/getting-started/: features.md  first-steps.md  help.md  index.md  installation.md
docs/guides/: index.md  install-python.md  package.md  projects.md  scripts.md  tools.md
docs/pip/: compatibility.md  compile.md  dependencies.md  environments.md  index.md  inspection.md  packages.md
docs/reference/: benchmarks.md  cli.md  environment.md  index.md  installer.md  resolver-internals.md  settings.md  storage.md
feedback/: index.html
getting-started/: index.html
getting-started/features/: index.html
guides/: index.html
pip/: index.html
reference/: index.html
search/: search_index.json
stylesheets/: extra.css
(+176 files in other folders)
